--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "accound_record",
-  "productName": "accound_record",
+  "name": "rec",
+  "productName": "rec",
   "version": "1.0.0",
   "description": "My Electron application description",
   "main": "src/index.js",
@@ -13,7 +13,7 @@
   },
   "keywords": [],
   "author": {
-    "name": "K",
+    "name": "L-Hyun",
     "email": "dkh1001@outlook.kr"
   },
   "license": "MIT",
@@ -24,7 +24,7 @@
         {
           "name": "@electron-forge/maker-squirrel",
           "config": {
-            "name": "accound_record"
+            "name": "rec"
           }
         },
         {
@@ -53,6 +53,6 @@
     "@electron-forge/maker-rpm": "^6.0.0-beta.64",
     "@electron-forge/maker-squirrel": "^6.0.0-beta.64",
     "@electron-forge/maker-zip": "^6.0.0-beta.64",
-    "electron": "19.0.7"
+    "electron": "19.0.8"
   }
 }
