--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
     }
   },
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.0"
+    "electron-squirrel-startup": "^1.0.0",
+    "sql.js": "^1.7.0",
+    "xml2json-light": "^1.0.6"
   },
   "devDependencies": {
     "@electron-forge/cli": "^6.0.0-beta.64",
